<!--    Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->
<resources>
    <string name="app_name">Location Reminder</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location Details :</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app !</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to view your current location.</string>
    <string name="permission_on_save_denied_explanation">You need to grant location permission in order to save the location.</string>
    <string name="background_permission_denied_explanation">You need to grant location permission in order to save the reminder.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">
        Click the map to add a new marker to a point of interest or long click to add marker to another location and click the save button.</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofence.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <!-- Labels and dialogs -->
    <string name="login_button_label">login</string>
    <string name="google_login_button_label">Sign in with Google</string>
    <string name="email_login_button_label">Sign in with email</string>
    <string name="alert_dialog_message">Return to login?</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="my_location">My Location</string>
    <string name="no">No,thanks.</string>
    <string name="background_location_permission_title">Allow background location tracking?</string>
    <string name="background_location_permission_message">Please allow background location tracking
        all the time to save reminders and receive notifications.</string>
    <string name="alert_dialog_location_not_selected">No location selected</string>
    <string name="alert_dialog_exit_map_warning">You are about to exit without saving location. Are you sure?</string>
    <string name="alert_dialog_exit_button">exit</string>
    <string name="alert_dialog_deny">deny</string>
    <string name="alert_dialog_allow_button">allow</string>
    <string name="permission_explanation">In order to view your current location
        ,please allow location tracking next.</string>
    <string name="no_marker_placed">Pick up location first</string>
    <string name="geofence_added">Geofence added!</string>
    <string name="reminder_menu_item_delete">Delete</string>
    <string name="reminder_menu_item_edit">Edit</string>
    <string name="reminder_updated">Reminder Updated</string>
    <string name="login_success_message">Successfully logged in</string>
    <string name="saved_is_permission_granted_key">isPermissionGrantedKey</string>
    <string name="completely_denied_permission"><![CDATA[Location permission is needed to save the reminder,to grant permission please go to settings -> apps and notifications and restart the app .]]></string>

</resources>
